krecipes (2.0~beta2-4) UNRELEASED; urgency=medium

  [ Pino Toscano ]
  * Bump the debhelper compatibility to 9:
    - bump the debhelper build dependency to 9
    - bump compat to 9
  * Sort the .install files, and strip the debian/tmp prefix.
  * Install krecipes.xpm via .install file, instead of copying it in rules.

 -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Thu, 11 Sep 2014 10:28:36 +0200

krecipes (2.0~beta2-3) unstable; urgency=low

  * Add libqtwebkit-dev to Build-Depends (Closes: #618245)

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Tue, 22 Mar 2011 17:39:28 +0100

krecipes (2.0~beta2-2) unstable; urgency=low

  * Upload to unstable.
  * Point debian/control Vcs fields to the new Git repository. 

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sun, 13 Feb 2011 23:27:12 +0100

krecipes (2.0~beta2-1) experimental; urgency=low

  * New upstream release
  * Bump Standards-Version to 3.9.1, no changes required

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Mon, 01 Nov 2010 21:05:51 +0100

krecipes (2.0~beta1-1) unstable; urgency=low

  * New upstream release
  * Updated debian/copyright
  * Bump Standards-Version to 3.9.0, no changes required

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Tue, 06 Jul 2010 19:26:25 +0200

krecipes (2.0~alpha6-2) unstable; urgency=low

  * Build depend on shared-desktop-ontologies and shared-mime-info
    (Closes: #581319)
  * Bump Standards-Version to 3.8.4, no changes required.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Wed, 12 May 2010 15:38:36 +0200

krecipes (2.0~alpha6-1) unstable; urgency=low

  [ José Manuel Santamaría Lema ]
  * New upstream release
  * Fix FTBFS with gcc 4.5, thanks to Pino Toscano for fixing this
    upstream (Closes: #565020)
  * Removed unneccesary build depends libmysqlclient-dev and libpq-dev
  * Added "DEB_KDE_LINK_WITH_AS_NEEDED := yes" to debian/rules
