@@ -1,14 +1,12 @@
 #!/usr/bin/make -f
   
-# Add here any variable or target overrides you need
+export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
 
-DEB_INSTALL_DOCS_krecipes = KRAZY cmake/COPYING-CMAKE-SCRIPTS
-DEB_DH_STRIP_ARGS = --dbg-package=krecipes-dbg
+%:
+	dh $@ --parallel --with kde
 
-DEB_KDE_LINK_WITH_AS_NEEDED := yes
-
-include /usr/share/pkg-kde-tools/makefiles/1/cdbs/kde.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
+override_dh_strip:
+	dh_strip --dbg-package=krecipes-dbg
 
 get-orig-source:
 	@@dh_testdir
