@@ -6,6 +6,10 @@ krecipes (2.0~beta2-4) UNRELEASED; urgency=medium
     - bump compat to 9
   * Sort the .install files, and strip the debian/tmp prefix.
   * Install krecipes.xpm via .install file, instead of copying it in rules.
+  * Migrate to the dh sequencer:
+    - use the dh sequencer in rules, using the kde addon, with parallel build,
+      and in as-needed mode
+    - drop the cdbs build dependency
 
  -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Thu, 11 Sep 2014 10:28:36 +0200
 
